Prevent wrapping.

--- a/plugins/layouts/wwm_collpase_3/wwm_collapse_3.scss
+++ b/plugins/layouts/wwm_collpase_3/wwm_collapse_3.scss
@@ -29,7 +29,7 @@
 #wwm-collapse-3 {
 	display: flex;
 	width: 100%;
-	flex-flow: row wrap;
+	flex-flow: row nowrap;
 	align-content: flex-start;
 
 	.left-column,
